@@ -12,6 +12,7 @@ Changes from 1.1.0 to 1.1.2
 ** Improvement
     * [FELIX-2492] - scr plugin: using src annotations causes NoClassDefFoundError and other errors
     * [FELIX-2939] - Maven SCR Plugin is not (marked as) thread-safe for parallel builds
+    * [FELIX-2908] - Use same mechanism to get single annotation values as for multiple annotation values
 
 
 Changes from 1.0.0 to 1.1.0
